--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
