--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux-logger": "^3.0.6",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
