--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.3.1",
