--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "redux-logger": "^3.0.6",
     "validator": "^13.9.0",
