--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "gapi-script": "^1.2.0",
+    "hamburger-react": "^2.5.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
