--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "repoappidea",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=16.13.2"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
